--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2 class="logo">Travel</h2>
             <div class="toggle"></div>
         </header>
-        <video src="travel.mp4" muted loop autoplay playsinline></video>
+        <video src="https://res.cloudinary.com/jeissong/video/upload/v1647486629/Responsive-Video-Landing-Page/travel_lgktiq.mp4" muted loop autoplay playsinline></video>
         <div class="overlay"></div>
         <div class="text">
             <h2>Never Stop To</h2>
